tdf#162760 Fix solver crashing with unset parameters

This patch fixes 2 related issues:
1) Solver engines may crash internally and we need to catch these exceptions and inform the user instead of letting Calc crash entirely.
2) When initializing solver settings, we only set the default values for the first engine; we need to set the defaults for all engines.

Change-Id: Ia598f7c17c25b5d6277f2ce24d2f4d552f897fe0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172955
Reviewed-by: Rafael Lima <rafael.palma.lima@gmail.com>
Tested-by: Jenkins